--- a/style.css
+++ b/style.css
@@ -2,3 +2,21 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+img {
+    width: 200px;
+    height: 100px;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.header {
+    display: flex;
+}
