--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ img {
 
 a {
     text-decoration: none;
-    color: white;
+    color: #E5E7EB;
 }
 
 ul {
@@ -19,5 +19,5 @@ ul {
 
 .header {
     display: flex;
-    background-color: navy;
+    background-color: #1f2937;
 }
