--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 
-html {
+body {
     display: flex;
     flex-direction: column;
     font-family: 'Times New Roman', Times, serif;
+    margin: 0px;
 }
 
 img {
