--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ ul {
     list-style-type: none;
     display: flex;
     align-items: center;
+    gap: 16px;
 }
 
 .header {
     display: flex;
     background-color: #1f2937;
     justify-content: space-between;
+    padding: 16px 50px;
 }
