--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
     display: flex;
+    flex: 1;
     flex-direction: column;
     font-family: 'Times New Roman', Times, serif;
     margin: 0px;
@@ -25,7 +26,13 @@ ul {
 
 .header {
     display: flex;
-    background-color: #1f2937;
+    background-color: #1F2937;
     justify-content: space-between;
     padding: 16px 50px;
+}
+
+.box-1 {
+    display: flex;
+    padding: 100px 50px;
+    background-color: #1F2937;
 }
