--- a/style.css
+++ b/style.css
@@ -41,3 +41,9 @@ ul {
     height: 200px;
     width: 200px;
 }
+
+.hero-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
