--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 a {
     text-decoration: none;
     color: #E5E7EB;
+    font-size: 18px;
 }
 
 ul {
@@ -46,4 +47,9 @@ ul {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+}
+
+.hero-subtext {
+font-size: 18px;
+color: #E5E7EB;
 }
