--- a/style.css
+++ b/style.css
@@ -36,12 +36,17 @@ ul {
     display: flex;
     padding: 100px 50px;
     background-color: #1F2937;
-    
 }
 
 .lawyer-2 {
     height: 300px;
     width: 500px;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .hero-text {
