--- a/style.css
+++ b/style.css
@@ -64,5 +64,7 @@ color: #E5E7EB;
 button {
     background-color: #3882F6;
     color: white;
-    
+    width: 100px;
+    height: 30px;
+    border-radius: 25px;
 }
