--- a/style.css
+++ b/style.css
@@ -68,3 +68,9 @@ button {
     height: 30px;
     border-radius: 25px;
 }
+
+.box-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
