--- a/style.css
+++ b/style.css
@@ -73,4 +73,11 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 100px 250px;   
+}
+
+.review-text {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
 }
