--- a/style.css
+++ b/style.css
@@ -86,12 +86,12 @@ button {
     display: flex;
     justify-content: space-between;
     gap: 16px;
-
+    margin: 50px;
 }
 
 .review-img {
-    height: 50px;
-    width: 50px;
+    height: 250px;
+    width: 200px;
     border: solid #3882F6;
     border-radius: 8px;
 }
