--- a/style.css
+++ b/style.css
@@ -94,5 +94,7 @@ button {
     width: 200px;
     border: solid #3882F6;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
 }
 
