--- a/style.css
+++ b/style.css
@@ -102,3 +102,24 @@ button {
 .review-boxes {
     width: 200px;
 }
+
+.box-3 {
+    background-color: #E5E7EB;
+    padding: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: light;
+    color: #1F2937;
+}
+
+.quoter {
+    text-align: end;
+    font-weight: bold;
+    font-size: 22px;
+}
