.cta-hook .cta-text
added color to both classes, adjusted size and weight for .cta-hook

--- a/style.css
+++ b/style.css
@@ -132,3 +132,12 @@ button {
     align-items: center;
     background-color: #3882F6;
 }
+
+.cta-hook, .cta-text {
+    color: white;
+}
+
+.cta-hook {
+    font-weight: bold;
+    font-size: large;
+}
